[metadata]
name = NginxPM_api
version = 0.0.1
author = N4v41
author_email = n4v41@naval.one
description = Python Client for Nginx Proxy Manager API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/N4v41/NginxPM_api
project_urls =
    Bug Tracker = https://github.com/N4v41/NginxPM_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
        requests
[options.packages.find]
where = src